# JoltDLLMU

./: .gitattributes  .gitignore  LinuxBuildDockerfile  LinuxBuildDockerfileDebug  LinuxBuildDockerfileDynamicPb  LinuxBuild_README.md  LinuxPbBuildDockerfile  LinuxWithCMakeDockerfile  README.md  build_and_install_all.sh  clean_all_build_install.sh  install_cmake_and_prepare_msbuild_envs.sh  install_protoc_and_prepare_envs.sh  recursive_doc2unix.ps1  some_git_cmds.md  start_linux_docker_container_debug_interactive.sh  start_linux_docker_container_interactive.sh  start_linux_dynamic_pb_docker_container_interactive.sh
JoltBindings/: AbstractCacheableAnimNodePoolTemplate.cs  AbstractCacheableAnimNodeTemplate.cs  CMakeLists.txt  CSharpCMakeLists.txt.deprecated  Directory.Build.props  ErrCode.cs  FrameRingBuffer.cs  JoltBindingsAfterTarget.cmake  JoltBindingsBeforeTarget.cmake  JoltCSharpBindings.cs  JoltcPrebuiltLoader.cs  KvPriorityQueue.cs  PbBuffs.cs  PbBuilders.cs  PbCharacters.cs  PbClasses.cmake  PbConsts.cs  PbDebuffs.cs  PbPrimitives.cs  PbSkills.cs  PbTraps.cs  PbTriggers.cs  RefConst_destructor_trick.drawio  RefConst_destructor_trick.md  RingBuffer.cs  RuleOfThumb.md  SerializableData.cs  build_and_install.sh  build_and_install_joltc.sh  clean_build_install.sh  joltphy.csproj  proto_gen_shortcut.sh  serializable_data.proto  the_bash_cmd_for_sed.txt  vim_case_convert.md  vim_convert_camelCase_to_snake_case.md
JoltBindings.CSharp.Tests/: JoltcTest.cs  joltphysics.Test.csproj
JoltBindings.Tests/: FrontendTest.cs  JoltBindings.Test.csproj  README.md
JoltBindings.Tests/Properties/: launchSettings.json
JoltBindings/CppTests/Backend/: Backend.cmake  Test.cpp
JoltBindings/CppTests/Frontend/: Frontend.cmake  Test.cpp
JoltBindings/CppTests/RingBufferMt/: RingBufferMt.cmake  Test.cpp
JoltBindings/Overridables/: PbBuffs.cs  PbCharacters.cs  PbDebuffs.cs  PbPickables.cs  PbPrimitives.cs  PbSkills.cs  PbTraps.cs  PbTriggers.cs
JoltBindings/joltc/: BackendBattle.cpp  BackendBattle.h  BaseBattle.cpp  BaseBattle.h  BaseBattleCollisionFilter.h  BaseNpcReaction.cpp  BaseNpcReaction.h  Bat1NpcReaction.cpp  Bat1NpcReaction.h  BattleConsts.h  BlackSaber1NpcReaction.cpp  BlackSaber1NpcReaction.h  BlackSaber2NpcReaction.cpp  BlackSaber2NpcReaction.h  BlackSaberTestWithVisionNpcReaction.h  BlackShooter1NpcReaction.cpp  BlackShooter1NpcReaction.h  BlackShooter2NpcReaction.cpp  BlackShooter2NpcReaction.h  BlackThrower1NpcReaction.cpp  BlackThrower1NpcReaction.h  BulletCollideShapeCollector.h  CharacterCollideShapeCollector.h  CharacterCollisionCollector.h  CharacterVisionCollideShapeCollector.h  CollisionCallbacks.h  CollisionLayers.h  CppOnlyConsts.h  DebugLog.cpp  DebugLog.h  FrameRingBuffer.h  FrameRingBuffer.inl  FrontendBattle.cpp  FrontendBattle.h  NpcReactionConsts.h  PbConsts.h  RingBuffer.h  RingBuffer.inl  RingBufferMt.h  RingBufferMt.inl  (+9 more)
JoltBindings/joltc/include/: BackendBattle.h  BaseBattle.h  CollisionCallbacks.h  CollisionLayers.h  FrameRingBuffer.h  FrameRingBuffer.inl  FrontendBattle.h  RingBuffer.h  RingBuffer.inl
JoltBindings_cpp_test/: CMakeLists.txt  Test.cpp  build_and_install.sh
LibExportImportCppTest/: .gitignore  CMakeLists.txt  README.md  Test.cpp  build_and_install.sh
PbConstsWriter/: .gitignore  PbConstsWriter.csproj  Program.cs
StairsMechanismProposal/: stairs_proposal.drawio
SteamP2PCodeSnippets/: SteamNetworkDoctor.cs  SteamOnlineMapController.cs  SteamP2PSessionManager.cs
SteamP2PCodeSnippets/Abstract/: AbstractCacheableAnimNode.cs  AbstractCacheableAnimNodePool.cs  AbstractDraggableSingleSelectPanel.cs  AbstractHpBarInUIHeading.cs  AbstractJoltMapController.cs  AbstractSingleSelectCell.cs  AbstractSingleSelectCellWithSprRdr.cs  AbstractSingleSelectCellWithUiImage.cs  AbstractSingleSelectGroup.cs  AbstractSingleSelectPanel.cs
SteamP2PCodeSnippets/AnimControllers/: GameplayBtnsHintAnimController.cs  GameplayBtnsHintAnimPool.cs  JoltAimingRayAnimController.cs  JoltAimingRayAnimPool.cs  JoltBulletAnimController.cs  JoltBulletAnimPool.cs  JoltCharacterAnimController.cs  JoltCharacterAnimPool.cs  JoltInplaceHpBarAnimController.cs  JoltInplaceHpBarAnimPool.cs  JoltPickableAnimController.cs  JoltPickableAnimPool.cs  JoltTrapAnimController.cs  JoltTrapAnimPool.cs  JoltTriggerAnimController.cs  JoltTriggerAnimPool.cs  KeyChLightSourceAnimController.cs  KeyChLightSourceAnimPool.cs  SfxSourceAnimController.cs  SfxSourceAnimPool.cs
SteamP2PCodeSnippets/SelectGroup/: ConfirmOrCancelCell.cs  ConfirmOrCancelSelectGroup.cs
SteamP2PCodeSnippets/SelectPanel/: SteamRejoinPrompt.cs
UnityPackageOutput/: .gitignore  package.json
UnityPackageOutput/Runtime/: SerializableData.cs  joltphysics.asmdef
UnityPackageOutput/Runtime/Plugins/include/: FrameRingBuffer.inl
joltphysics_v5.3.0/Jolt/: Jolt.cmake
joltphysics_v5.3.0/Jolt/Geometry/: ClipPoly.h  ClosestPoint.h  GJKClosestPoint.h
joltphysics_v5.3.0/Jolt/Physics/: PhysicsSystem.cpp  PhysicsSystem.h
joltphysics_v5.3.0/Jolt/Physics/Body/: BodyManager.cpp  BodyManager.h
joltphysics_v5.3.0/Jolt/Physics/Character/: Character.cpp  Character.h  CharacterBase.h  CharacterVirtual.cpp  CharacterVirtual.h
joltphysics_v5.3.0/Jolt/Physics/Collision/BroadPhase/: BroadPhaseQuadTree.cpp  QuadTree.cpp
